// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches <ErrorMessage> snapshot 1`] = `
<Styled(styled.div)>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-htpNat",
          "isStatic": true,
          "lastClassName": "jwBQwt",
          "rules": Array [
            "
        padding: 1rem;
        background: white;
        margin: 1rem 0;
        border: 1px solid rgba(0, 0, 0, 0.05);
        border-left: 5px solid red;
        p {
          margin: 0;
          font-weight: 100;
        }
        strong {
          margin-right: 1rem;
        }
      ",
            "
        border-left: 5px solid red;
      ",
          ],
        },
        "displayName": "Styled(styled.div)",
        "foldedComponentIds": Array [
          "sc-bdVaJa",
        ],
        "render": [Function],
        "styledComponentId": "sc-htpNat",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="sc-bdVaJa sc-htpNat jwBQwt"
    />
  </StyledComponent>
</Styled(styled.div)>
`;

exports[`matches <InfoMessage> snapshot 1`] = `
<Styled(styled.div)>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": true,
          "lastClassName": "kdOuOG",
          "rules": Array [
            "
        padding: 1rem;
        background: white;
        margin: 1rem 0;
        border: 1px solid rgba(0, 0, 0, 0.05);
        border-left: 5px solid red;
        p {
          margin: 0;
          font-weight: 100;
        }
        strong {
          margin-right: 1rem;
        }
      ",
            "
        border-left: 5px solid rgb(0, 122, 255);
      ",
          ],
        },
        "displayName": "Styled(styled.div)",
        "foldedComponentIds": Array [
          "sc-bdVaJa",
        ],
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="sc-bdVaJa sc-bwzfXH kdOuOG"
    />
  </StyledComponent>
</Styled(styled.div)>
`;
